tui/src/history_cell/snapshots/estelle_tui__history_cell__tests__coalesced_reads_dedupe_names.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Explored
  │ Read auth.rs, shimmer.rs
